@@ -5,7 +5,7 @@ use warnings;
 
 use Mojo::Base 'Mojolicious::Command::generate';
 
-our $VERSION = '0.9919';
+our $VERSION = '0.9920';
 
 has namespaces =>
       sub { [qw/Clustericious::Command::generate
