@@ -41,7 +41,7 @@ use base 'Mojolicious::Command';
 use strict;
 use warnings;
 
-our $VERSION = '0.9919';
+our $VERSION = '0.9920';
 
 __PACKAGE__->attr(description => "Start a hypnotad web server.\n");
 
