@@ -19,7 +19,7 @@ __PACKAGE__->attr(description => <<EOT);
 Start an nginx web server.
 EOT
 
-our $VERSION = '0.9919';
+our $VERSION = '0.9920';
 
 __PACKAGE__->attr(usage => <<EOT);
 Usage $0: nginx -p <prefix> [...other nginx options]
