@@ -54,7 +54,7 @@ use YAML::XS qw/Dump Load/;
 
 use Clustericious::Log;
 
-our $VERSION = '0.9919';
+our $VERSION = '0.9920';
 
 my $default_decode = 'application/x-www-form-urlencoded';
 my $default_encode = 'application/json';
