@@ -11,7 +11,7 @@ use Mojo::Base 'Mojolicious::Plugin';
 use warnings;
 use strict;
 
-our $VERSION = '0.9919';
+our $VERSION = '0.9920';
 
 =head1 NAME
 
