@@ -51,7 +51,7 @@ use Sub::Exporter -setup => {
     collectors => ['defaults'],
 };
 
-our $VERSION = '0.9919';
+our $VERSION = '0.9920';
 
 sub _build_proxy {
     my ( $class, $name, $arg, $defaults ) = @_;
