@@ -1,5 +1,7 @@
 Revision history for Clustericious
 
+         - Mojolicious 4.0 compatability
+
 0.9919   Fri May 10 19:27:40 EDT 2013
          - fix meta data
 
